--- a/app/src/main/res/layout/activity_admin_insert.xml
+++ b/app/src/main/res/layout/activity_admin_insert.xml
@@ -38,6 +38,20 @@
         android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:textSize="4mm"
+            android:textAlignment="center"
+            android:hint="عنوان"
+            android:id="@+id/VTitle"
+            android:layout_width="match_parent"
+            android:layout_height="8mm">
+
+        </EditText>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -74,6 +88,7 @@
                 android:layout_height="8mm" />
 
             <EditText
+                android:text="100"
                 android:textSize="4mm"
                 android:id="@+id/VArea"
                 android:textAlignment="center"
@@ -95,6 +110,17 @@
             android:layout_width="0mm"
             android:layout_height="40mm" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/map_InsertVilla"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="20mm"
+            android:scrollbars="vertical" />
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
