--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -30,11 +30,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <ListView
-            android:id="@+id/m_List_Admin"
+<!--        <ListView-->
+<!--            android:id="@+id/m_List_Admin"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"></ListView>-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view_Admin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
-
-
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            />
     </LinearLayout>
 </LinearLayout>
