--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -20,25 +20,24 @@
 
     </LinearLayout>
     <LinearLayout
-        android:orientation="horizontal"
-        android:background="#FAF4F4"
+        android:orientation="vertical"
+        android:background="@color/primaryLightColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-      <!--Set Content Views-->
+     <ImageView
 
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:padding="20mm"/>
     </LinearLayout>
     <LinearLayout
-        android:orientation="horizontal"
-        android:background="@color/primaryColor"
+        android:orientation="vertical"
+        android:background="#FAF4F4"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:background="#FF9800"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+
 
     </LinearLayout>
-
 </LinearLayout>
