--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/m_Username_ShowVilla"
+            android:id="@+id/m_Username_Reservation"
             android:background="#FF9800"
             android:padding="5mm"
             android:layout_width="wrap_content"
@@ -37,7 +37,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <android.support.v4.view.PagerTitleStrip
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top" />
+
+        </android.support.v4.view.ViewPager>
 
     </LinearLayout>
 </LinearLayout>
