--- a/app/src/main/res/layout/card_layout_admin.xml
+++ b/app/src/main/res/layout/card_layout_admin.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:tag="cards main container">
 
-<!--    <com.google.android.material.card.MaterialCardView-->
-<!--        style="@style/Widget.MaterialComponents.CardView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginLeft="@dimen/mtrl_card_spacing"-->
-<!--        android:layout_marginTop="@dimen/mtrl_card_spacing"-->
-<!--        android:layout_marginRight="@dimen/mtrl_card_spacing"-->
-<!--        android:minHeight="200dp">-->
-
-<!--        &lt;!&ndash; Card contents. &ndash;&gt;-->
-
-<!--    </com.google.android.material.card.MaterialCardView>-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view_admin"
         android:layout_width="match_parent"
         android:layout_height="30mm"
         card_view:cardBackgroundColor="@color/primaryLightColor"
@@ -28,46 +16,67 @@
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="386dp"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@drawable/ic_launcher_foreground"
-                android:id="@+id/imageView"
-                android:tag="image_tag"
+                android:src="@drawable/index"
+                android:id="@+id/imageView_admin"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:layout_weight="2"/>
-<!--            -->
+                android:layout_weight="2"
+                android:tag="image_tag" />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_weight="2"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewName"
+                    android:id="@+id/textViewName_admin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:text="Android Name"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
-                    android:id="@+id/textViewVersion"
+                    android:id="@+id/textViewVersion_admin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
 
                     android:text="Android Version"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/m_btn_cardEdit"
+                        android:text="Edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    </Button>
+                    <Button
+                        android:layout_marginEnd="20dp"
+                        android:id="@+id/m_btn_cardDel"
+                        android:text="Del"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    </Button>
+
+                </LinearLayout>
 
             </LinearLayout>
 
