--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:onClick="OnUser_Click"
             android:id="@+id/m_UserName"
             android:background="#FF9800"
             android:padding="5mm"
