--- a/app/src/main/res/layout/edit_dialog.xml
+++ b/app/src/main/res/layout/edit_dialog.xml
@@ -1,28 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#51000000"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
     <EditText
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Address"
-        android:id="@+id/txt_address_editDlg"
-        ></EditText>
+        android:hint="title"
+        android:id="@+id/txt_title_editDlg"/>
     <EditText
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Cost"
-        android:id="@+id/txt_price_editDlg"
-        ></EditText>
+        android:hint="address"
+        android:id="@+id/txt_address_editDlg"/>
     <EditText
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Room"
-        android:id="@+id/txt_roomcnt_editDlg"
-        ></EditText>
+        android:hint="lat"
+        android:id="@+id/txt_lat_editDlg"/>
+    <EditText
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="lon"
+        android:id="@+id/txt_lon_editDlg"/>
+    <EditText
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="cost"
+        android:id="@+id/txt_price_editDlg"/>
+    <EditText
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="room count"
+        android:id="@+id/txt_roomcnt_editDlg"/>
+    <EditText
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="capacity"
+        android:id="@+id/txt_Capacity_editDlg"/>
+    <EditText
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="area"
+        android:id="@+id/txt_area_editDlg"/>
+
+    <LinearLayout
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/img_villa_editDlg"
+            android:layout_width="0mm"
+            android:layout_weight="4"
+            android:layout_height="30mm"/>
+
+        <Button
+            android:id="@+id/btn_upload_editDlg"
+            android:layout_marginRight="5dp"
+            android:background="@color/primaryLightColor"
+            android:text="Upload"
+            android:layout_weight="1"
+            android:layout_width="0mm"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_camera_editDlg"
+            android:background="@color/primaryLightColor"
+            android:text="Camera"
+            android:layout_weight="1"
+            android:layout_width="0mm"
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="#F14A4A"
-            android:text="لغو"
+            android:text="Cancle"
             android:id="@+id/btn_dismiss"
             ></Button>
         <Button
@@ -48,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="#F14A4A"
-            android:text="ثبت"
+            android:text="Save"
             android:id="@+id/btn_update"
             android:onClick="onClick_btn_update"
             ></Button>
