--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -20,33 +20,28 @@
 
     </LinearLayout>
     <LinearLayout
-        android:orientation="vertical"
-        android:background="@color/primaryLightColor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-     <ImageView
-
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:padding="20mm"/>
-    </LinearLayout>
-    <LinearLayout
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#FAF4F4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:scrollbars="vertical">
 
-        <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentTop="true" />
 
-            <android.support.v4.view.PagerTitleStrip
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top" />
-
-        </android.support.v4.view.ViewPager>
+        <com.viewpagerindicator.CirclePageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="bottom"
+            android:padding="10dip"/>
 
     </LinearLayout>
+
+
+
 </LinearLayout>
