--- a/app/src/main/res/layout/card_layout_admin.xml
+++ b/app/src/main/res/layout/card_layout_admin.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@drawable/index"
+                android:src="@drawable/sh_line"
                 android:id="@+id/imageView_admin"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
