SigUp Phone Number Send SMS OK

--- a/app/src/main/res/layout/calender_layout.xml
+++ b/app/src/main/res/layout/calender_layout.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent">
 
 
+<!--    <sun.bob.mcalendarview.MCalendarView-->
+<!--        android:id="@+id/m_calenderView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
     <CalendarView
         android:id="@+id/m_calenderView"
         android:layout_width="match_parent"
