--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,23 +16,23 @@
             android:textSize="4mm"
             android:textAlignment="center"
             android:id="@+id/m_usernameSignUP"
-            android:hint="Username"
+            android:hint="Name"
             android:padding="3mm"
             android:layout_margin="1mm"
             android:background="@color/secondaryColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <EditText
-            android:textSize="4mm"
-            android:textAlignment="center"
-            android:id="@+id/m_passwordSignUP"
-            android:hint="Password"
-            android:padding="3mm"
-            android:layout_margin="1mm"
-            android:background="@color/secondaryColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+<!--        <EditText-->
+<!--            android:textSize="4mm"-->
+<!--            android:textAlignment="center"-->
+<!--            android:id="@+id/m_passwordSignUP"-->
+<!--            android:hint="Password"-->
+<!--            android:padding="3mm"-->
+<!--            android:layout_margin="1mm"-->
+<!--            android:background="@color/secondaryColor"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
 
         <EditText
             android:textSize="4mm"
