--- a/app/src/main/res/layout/activity_villa_adapter_admin.xml
+++ b/app/src/main/res/layout/activity_villa_adapter_admin.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="vertical"
-    android:padding="3mm"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:padding="3mm"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -59,7 +57,6 @@
 
     </LinearLayout>
     <LinearLayout
-        android:padding="1mm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
