--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:onClick="Customer_logout"
             android:id="@+id/m_UserName_Customer"
             android:background="#FF9800"
             android:padding="5mm"
