[CHANGE]change sms and card adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,6 @@
         android:layout_width="match_parent"
         android:padding="10mm">
 
-<!--        <EditText-->
-<!--            android:textColor="#000"-->
-<!--            android:layout_margin="1mm"-->
-<!--            android:padding="1mm"-->
-<!--            android:textAlignment="center"-->
-<!--            android:id="@+id/Login_name"-->
-<!--            android:hint="Name"-->
-<!--            android:background="@color/primaryColor"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-
         <EditText
             android:textColor="#000"
             android:layout_margin="1mm"
@@ -54,9 +43,7 @@
             android:id="@+id/SignupBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
-            android:textColor="#F00C0C" />
-
+            android:text="Sign Up"/>
 
 
     </LinearLayout>
