--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
   <color name="primaryColor">#ff7043</color>
-  <color name="primaryLightColor">#ffa270</color>
+  <color name="primaryLightColor">#D1530F</color>
   <color name="primaryDarkColor">#c63f17</color>
   <color name="secondaryColor">#64b5f6</color>
   <color name="secondaryLightColor">#9be7ff</color>
