--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -3,28 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-<!--    <androidx.drawerlayout.widget.DrawerLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <include-->
-<!--            layout="@layout/app_bar_main"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent" />-->
-
-<!--        <com.google.android.material.navigation.NavigationView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"/>-->
-
-<!--    </androidx.drawerlayout.widget.DrawerLayout>-->
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:keepScreenOn="true"
+    android:scrollbars="vertical">
     <LinearLayout
         android:orientation="horizontal"
         android:background="@color/primaryColor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0mm"
+        android:layout_weight="0.1">
         <TextView
             android:onClick="Customer_logout"
             android:id="@+id/m_UserName_Customer"
@@ -35,7 +22,8 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0mm"
+        android:layout_weight="0.1">
         <Button
             android:onClick="Onclick_BtnFilter"
             android:id="@+id/m_Btn_Filter"
@@ -46,47 +34,32 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0mm"
+        android:layout_weight="0.5">
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="30mm"
+            android:layout_height="0mm"
+            android:layout_weight="0.5"
             android:scrollbars="vertical"
             />
 
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
-        android:padding="0mm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0mm"
+        android:layout_weight="0.5">
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="2">
+            android:scrollbars="vertical"/>
 
 
-
-<!--            <ListView-->
-<!--                android:id="@+id/m_list2"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:scrollbars="vertical">-->
-
-<!--            </ListView>-->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/my_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                />
-
-
-        </LinearLayout>
 
 
     </LinearLayout>
