--- a/app/src/main/res/layout/card_layout_admin.xml
+++ b/app/src/main/res/layout/card_layout_admin.xml
@@ -3,35 +3,31 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:tag="cards main container">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_admin"
         android:layout_width="match_parent"
-        android:layout_height="30mm"
+        android:layout_height="90mm"
         card_view:cardBackgroundColor="@color/primaryLightColor"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
-
         <LinearLayout
-            android:layout_width="386dp"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-<!--            android:src="@drawable/sh_line"-->
-<!--            android:background="@color/cardview_dark_background"-->
+            android:layout_width="match_parent"
+            android:layout_height="80mm"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/imageView_admin"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0mm"
                 android:layout_margin="5dp"
-                android:layout_weight="2"
+                android:layout_weight="6"
                 />
 <!--            android:tag="image_tag"-->
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="0mm"
                 android:layout_marginTop="12dp"
                 android:layout_weight="2"
                 android:orientation="vertical">
@@ -80,10 +76,6 @@
 
             </LinearLayout>
 
-
-        </LinearLayout>
-        <LinearLayout android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
