--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keepScreenOn="true"
     android:scrollbars="vertical">
     <LinearLayout
         android:orientation="horizontal"
@@ -16,9 +15,14 @@
             android:onClick="Customer_logout"
             android:id="@+id/m_UserName_Customer"
             android:background="#FF9800"
-            android:padding="5mm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="0mm"
+            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:textAlignment="center"/>
+        <ImageView
+            android:layout_weight="8"
+            android:layout_width="0mm"
+            android:layout_height="match_parent"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,32 +39,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="0.5">
-
+        android:layout_weight="0.4">
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="0mm"
-            android:layout_weight="0.5"
             android:scrollbars="vertical"
-            />
+            android:layout_height="match_parent"
+            tools:ignore="NestedWeights" />
 
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="0.5">
+        android:layout_weight="0.6">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"/>
-
-
-
-
     </LinearLayout>
 </LinearLayout>
