--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -5,23 +5,11 @@
     android:orientation="vertical"
     android:tag="cards main container">
 
-<!--    <com.google.android.material.card.MaterialCardView-->
-<!--        style="@style/Widget.MaterialComponents.CardView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginLeft="@dimen/mtrl_card_spacing"-->
-<!--        android:layout_marginTop="@dimen/mtrl_card_spacing"-->
-<!--        android:layout_marginRight="@dimen/mtrl_card_spacing"-->
-<!--        android:minHeight="200dp">-->
-
-<!--        &lt;!&ndash; Card contents. &ndash;&gt;-->
-
-<!--    </com.google.android.material.card.MaterialCardView>-->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="30mm"
+        android:layout_height="60mm"
         card_view:cardBackgroundColor="@color/primaryLightColor"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
@@ -30,23 +18,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
                 android:src="@drawable/ic_launcher_foreground"
                 android:id="@+id/imageView"
                 android:tag="image_tag"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0mm"
                 android:layout_margin="5dp"
+                android:adjustViewBounds="true"
                 android:layout_weight="2"/>
 <!--            -->
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="0mm"
                 android:layout_marginTop="12dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:orientation="vertical"
                 >
 
