--- a/app/src/main/res/layout/activity_admin_insert.xml
+++ b/app/src/main/res/layout/activity_admin_insert.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -14,11 +15,17 @@
           android:scaleType="fitXY"
           android:id="@+id/adminInsert_cover"
           android:onClick="Onclick_addpic"
-          android:background="@drawable/profile_notify"
+          android:background="@drawable/bg"
           android:layout_weight="0.2"
           android:layout_width="0mm"
           android:layout_height="match_parent"/>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/add_selector"/>
     </LinearLayout>
 
     <LinearLayout
