--- a/app/src/main/res/layout/insert_autenticate_key.xml
+++ b/app/src/main/res/layout/insert_autenticate_key.xml
@@ -9,7 +9,8 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="title"
+        android:hint="Code"
+        android:textSize="5mm"
         android:id="@+id/txt_autenticate_key"/>
 
     <Button
@@ -19,7 +20,6 @@
         android:layout_height="wrap_content"/>
 
     <Button
-        android:textSize="1mm"
         android:id="@+id/Btn_Cancle"
         android:text="Cancle"
         android:layout_width="match_parent"
