--- a/app/src/main/res/drawable/sh_line.xml
+++ b/app/src/main/res/drawable/sh_line.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="3dp"  android:color="@color/secondaryLightColor" />
+    <stroke android:width="3dp"  android:color="@color/primaryDarkColor" />
     <corners android:bottomLeftRadius="30dp" android:topRightRadius="30dp"
         android:bottomRightRadius="30dp" android:topLeftRadius="30dp"/>
 <!--    <padding android:left="1dp" android:top="1dp" android:right="1dp"-->
