--- a/app/src/main/res/layout/activity_admin_insert.xml
+++ b/app/src/main/res/layout/activity_admin_insert.xml
@@ -19,13 +19,28 @@
           android:layout_weight="0.2"
           android:layout_width="0mm"
           android:layout_height="match_parent"/>
+<!--        <androidx.viewpager.widget.ViewPager-->
+<!--            android:id="@+id/adminInser_pager"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="232dp"-->
+<!--            android:layout_alignParentTop="true" />-->
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:src="@drawable/add_selector"/>
+<!--        <com.viewpagerindicator.CirclePageIndicator-->
+<!--            android:id="@+id/admin_Insert_indicator"-->
+<!--            android:layout_width="fill_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:gravity="bottom"-->
+<!--            android:padding="10dip"/>-->
+
+
+        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/fab"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom|end"-->
+<!--            android:src="@drawable/add_selector"/>-->
     </LinearLayout>
 
     <LinearLayout
