--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -28,18 +28,25 @@
         android:layout_width="match_parent"
         android:layout_height="0mm"
         android:layout_weight="0.1">
-        <Button
-            android:onClick="Onclick_BtnFilter"
-            android:id="@+id/m_Btn_Filter"
-            android:textSize="3mm"
-            android:text="Filter"
+        <SearchView
+            android:id="@+id/item_search"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:iconifiedByDefault="false"
+            android:queryHint="@string/search_hint">
+
+        </SearchView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="0.4">
+        android:layout_weight="0.4"
+        android:orientation="vertical">
+<!--        <fragment-->
+<!--            android:id="@+id/place_autocomplete_fragment"-->
+<!--            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
