--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -9,7 +9,8 @@
         android:orientation="horizontal"
         android:background="@color/primaryColor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_weight="1"
+        android:layout_height="0mm">
 
         <TextView
             android:id="@+id/m_Username_Reservation"
@@ -21,14 +22,17 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0mm"
         android:orientation="vertical"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:layout_weight="5">
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager"
+            android:padding="5mm"
+            android:background="@drawable/item_selector"
             android:layout_width="match_parent"
-            android:layout_height="232dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true" />
 
         <com.viewpagerindicator.CirclePageIndicator
@@ -45,7 +49,8 @@
     <LinearLayout
         android:layout_marginTop="1mm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0mm"
+        android:layout_weight="2"
         android:orientation="vertical">
 
         <LinearLayout
@@ -93,7 +98,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0mm"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <Button
