--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -9,8 +9,8 @@
         android:id="@+id/card_view"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="60mm"
-        card_view:cardBackgroundColor="@color/primaryLightColor"
+        android:layout_height="40mm"
+        card_view:cardBackgroundColor="@color/pressColor"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
