--- a/app/src/main/res/layout/slidingimages_layout.xml
+++ b/app/src/main/res/layout/slidingimages_layout.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="1dip" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
-
         android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher"
+        android:background="@drawable/item_selected"
         android:scaleType="centerCrop" />
+    <Button
+        android:id="@+id/slider_btnDel"
+        android:visibility="invisible"
+        android:layout_gravity="center"
+        android:layout_width="10mm"
+        android:layout_height="10mm"
+        android:text="Del"/>
+
 </FrameLayout>
