--- a/app/src/main/res/layout/activity_admin_insert.xml
+++ b/app/src/main/res/layout/activity_admin_insert.xml
@@ -12,13 +12,13 @@
         android:orientation="horizontal">
 
       <ImageView
-          android:scaleType="fitXY"
+          android:scaleType="centerCrop"
           android:id="@+id/adminInsert_cover"
           android:onClick="Onclick_addpic"
           android:background="@drawable/bg"
-          android:layout_weight="0.2"
-          android:layout_width="0mm"
-          android:layout_height="match_parent"/>
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_gravity="center"/>
 <!--        <androidx.viewpager.widget.ViewPager-->
 <!--            android:id="@+id/adminInser_pager"-->
 <!--            android:layout_width="match_parent"-->
@@ -123,6 +123,13 @@
             android:textAlignment="center"
             android:layout_weight="0.25"
             android:layout_width="0mm"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/BtngoToGallery"
+            android:text="گالری"
+            android:layout_width="0mm"
+            android:layout_weight="0.25"
             android:layout_height="wrap_content" />
 
         <Button
