--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -9,17 +9,23 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:background="@color/primaryColor"
         android:layout_width="match_parent"
+        android:background="@color/Transparent"
         android:layout_height="0mm"
-        android:layout_weight="1">
+        android:layout_weight="0.5">
         <TextView
             android:onClick="OnUser_Click"
             android:id="@+id/m_UserName"
-            android:background="#FF9800"
+            android:background="@drawable/item_selected"
+            android:textColor="@color/pressColor"
+            android:textAlignment="center"
             android:layout_width="0mm"
             android:layout_weight="2"
             android:layout_height="match_parent" />
+        <ImageView
+            android:layout_weight="8"
+            android:layout_width="0mm"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
     <LinearLayout
@@ -30,18 +36,12 @@
         android:layout_weight="9">
         <Button
             android:onClick="Onclick_BtnAdd"
+            android:background="@drawable/item_selected"
             android:id="@+id/m_Btn_Add"
             android:textSize="3mm"
             android:text="+"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-
-<!--        <ListView-->
-<!--            android:id="@+id/m_List_Admin"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"></ListView>-->
+            android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_recycler_view_Admin"
