--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -7,18 +7,19 @@
     android:scrollbars="vertical">
     <LinearLayout
         android:orientation="horizontal"
-        android:background="@color/primaryColor"
         android:layout_width="match_parent"
+        android:background="@color/Transparent"
         android:layout_height="0mm"
-        android:layout_weight="0.1">
+        android:layout_weight="0.5">
         <TextView
-            android:onClick="Customer_logout"
             android:id="@+id/m_UserName_Customer"
-            android:background="#FF9800"
+            android:onClick="Customer_logout"
+            android:background="@drawable/item_selected"
+            android:textColor="@color/pressColor"
+            android:textAlignment="center"
             android:layout_width="0mm"
             android:layout_weight="2"
-            android:layout_height="match_parent"
-            android:textAlignment="center"/>
+            android:layout_height="match_parent" />
         <ImageView
             android:layout_weight="8"
             android:layout_width="0mm"
@@ -27,7 +28,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="0.1">
+        android:layout_weight="0.5">
         <SearchView
             android:id="@+id/item_search"
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="0.4"
+        android:layout_weight="4"
         android:orientation="vertical">
 <!--        <fragment-->
 <!--            android:id="@+id/place_autocomplete_fragment"-->
@@ -60,7 +61,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="0.6">
+        android:layout_weight="4">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_recycler_view"
