--- a/app/src/main/res/layout/card_layout_admin.xml
+++ b/app/src/main/res/layout/card_layout_admin.xml
@@ -9,7 +9,7 @@
         android:id="@+id/card_view_admin"
         android:layout_width="match_parent"
         android:layout_height="90mm"
-        card_view:cardBackgroundColor="@color/design_default_color_primary"
+        card_view:cardBackgroundColor="@color/selectGreyColor"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
@@ -23,8 +23,8 @@
                 android:layout_height="0mm"
                 android:layout_margin="5dp"
                 android:layout_weight="6"
+                android:scaleType="fitXY"
                 />
-<!--            android:tag="image_tag"-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0mm"
@@ -59,7 +59,8 @@
                     <Button
                         android:id="@+id/m_btn_cardEdit"
                         android:text="Edit"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0mm"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content">
 
                     </Button>
@@ -67,7 +68,8 @@
                         android:layout_marginEnd="20dp"
                         android:id="@+id/m_btn_cardDel"
                         android:text="Del"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0mm"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content">
 
                     </Button>
