--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -10,7 +10,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="40mm"
-        card_view:cardBackgroundColor="@color/pressColor"
+        card_view:cardBackgroundColor="@color/selectGreyColor"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
@@ -28,6 +28,7 @@
                 android:layout_height="0mm"
                 android:layout_margin="5dp"
                 android:adjustViewBounds="true"
+                android:scaleType="fitXY"
                 android:layout_weight="2"/>
 <!--            -->
 
