--- a/app/src/main/res/layout/activity_admin_insert.xml
+++ b/app/src/main/res/layout/activity_admin_insert.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:scrollbars="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -16,7 +16,6 @@
           android:scaleType="centerCrop"
           android:id="@+id/adminInsert_cover"
           android:onClick="Onclick_addpic"
-          android:background="@drawable/bg"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_gravity="center"/>
@@ -31,49 +30,71 @@
 
         <EditText
             android:textAlignment="center"
-            android:hint="عنوان"
+            android:hint="@string/villa_title"
             android:id="@+id/VTitle"
             android:layout_width="match_parent"
             android:layout_height="0mm"
-            android:layout_weight="0.1" />
+            android:layout_weight="0.14" />
 
-        <EditText
-            android:id="@+id/VCost"
-            android:textAlignment="center"
-            android:hint="قیمت :تومان"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_weight="0.14"
             android:layout_width="match_parent"
-            android:layout_height="0mm"
-            android:layout_weight="0.1"/>
+            android:layout_height="0mm">
+            <EditText
+                android:id="@+id/VCost"
+                android:textAlignment="center"
+                android:hint="@string/villa_cost"
+                android:layout_width="0mm"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"/>
+            <EditText
+                android:id="@+id/VCost_weeken"
+                android:textAlignment="center"
+                android:hint="@string/villa_cost_weekend"
+                android:layout_width="0mm"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"/>
+            <EditText
+                android:id="@+id/VCost_special"
+                android:textAlignment="center"
+                android:hint="@string/villa_cost_special"
+                android:layout_width="0mm"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"/>
+
+        </LinearLayout>
+
         <EditText
             android:id="@+id/VRoomCnt"
             android:textAlignment="center"
-            android:hint="تعداد اتاق :نفر"
+            android:hint="@string/villa_roomcnt"
             android:layout_width="match_parent"
             android:layout_height="0mm"
-            android:layout_weight="0.1"/>
+            android:layout_weight="0.14"/>
 
         <EditText
             android:id="@+id/VCapacity"
             android:textAlignment="center"
-            android:hint="ظرفیت :نفر"
+            android:hint="@string/villa_capacity"
             android:layout_width="match_parent"
             android:layout_height="0mm"
-            android:layout_weight="0.1"/>
+            android:layout_weight="0.14"/>
 
         <EditText
             android:id="@+id/VArea"
             android:textAlignment="center"
-            android:hint="متراژ :متر"
+            android:hint="@string/villa_area"
             android:layout_width="match_parent"
             android:layout_height="0mm"
-            android:layout_weight="0.1"/>
+            android:layout_weight="0.14"/>
         <EditText
             android:id="@+id/VAdderss"
             android:textAlignment="center"
-            android:hint="آدرس"
+            android:hint="@string/villa_address"
             android:layout_width="match_parent"
             android:layout_height="0mm"
-            android:layout_weight="0.1"/>
+            android:layout_weight="0.14"/>
     </LinearLayout>
 
 
@@ -100,8 +121,7 @@
             android:layout_height="wrap_content" />
 
         <Button
-            android:onClick="Onclick_BtnAdd"
-            android:text="ثبت"
+            android:id="@+id/BtnAction"
             android:textAlignment="center"
             android:layout_weight="0.25"
             android:layout_width="0mm"
@@ -114,13 +134,6 @@
             android:layout_weight="0.25"
             android:layout_height="wrap_content" />
 
-<!--        <Button-->
-<!--            android:layout_marginLeft="20mm"-->
-<!--            android:id="@+id/btnTakePicture"-->
-<!--            android:text="دوربین"-->
-<!--            android:layout_width="0mm"-->
-<!--            android:layout_weight="0.25"-->
-<!--            android:layout_height="wrap_content" />-->
         <Button
             android:id="@+id/m_uploadBtn"
             android:text="آپلود"
