--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -39,15 +39,13 @@
         </SearchView>
     </LinearLayout>
     <LinearLayout
+        android:layout_marginLeft="3mm"
+        android:layout_marginRight="3mm"
         android:layout_width="match_parent"
         android:layout_height="0mm"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:orientation="vertical">
-<!--        <fragment-->
-<!--            android:id="@+id/place_autocomplete_fragment"-->
-<!--            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
+
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
